--- a/MediChain-Pharmacy-master/package.json
+++ b/MediChain-Pharmacy-master/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "^5.0.1",
     "swal": "^0.1.0",
     "sweetalert2": "^11.3.0",
+    "uuid": "^10.0.0",
     "web-vitals": "^1.0.1",
     "web3": "^1.9.0"
   },
